# MySnippets

./: .gitignore  CMakeLists.txt
include/: Database.h  LeftPanel.h  MainFrame.h  MiddlePanel.h  MyApp.h  RightPanel.h
src/: Database.cpp  LeftPanel.cpp  MainFrame.cpp  MiddlePanel.cpp  MyApp.cpp  RightPanel.cpp
